--- a/html/sass/components/_modal.scss
+++ b/html/sass/components/_modal.scss
@@ -57,6 +57,11 @@
       }
     }
   }
+  &__image-slide {
+    img {
+      max-width: 640px;
+    }
+  }
   $margin-arrow: 450px;
   &__arrow {
     &.fancybox-button {
