--- a/html/sass/home-page.scss
+++ b/html/sass/home-page.scss
@@ -5,5 +5,9 @@
 @import "components/video";
 @import "layout/hero";
 @import "layout/how-we-work";
+@import "layout/buy";
+@import "layout/callback";
+@import "layout/delivery";
+@import "layout/benefits";
 @import "layout/contact";
 
