--- a/html/sass/layout/_benefits.scss
+++ b/html/sass/layout/_benefits.scss
@@ -1,6 +1,36 @@
 .benefits {
   background: $dark-light;
   padding: 88px 0px 129px;
+  position: relative;
+  @include media(1200) {
+    padding: 106px 0px 92px;
+  }
+  &:before,
+  &:after {
+
+    content: '';
+    background-image: url("../images/benefits-decor.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    @include size(489, 518);
+  }
+  &:before {
+    right: -100px;
+    top: -100px;
+    @include media(1200) {
+      right: -200px;
+      top: -20px;
+    }
+  }
+  &:after {
+    left: -200px;
+    bottom: -200px;
+  }
+  .container {
+    position: relative;
+    z-index: 2;
+  }
   &__heading {
     margin-bottom: 85px;
     text-align: center;
@@ -23,6 +53,9 @@
     gap: $gap;
     margin-left: auto;
     margin-right: auto;
+    @include media(1200) {
+      grid-template-columns: 1fr;
+    }
   }
   &__item {
     display: flex;
@@ -35,22 +68,51 @@
     flex-direction: column;
     grid-column: 2 / 3;
     grid-row: 1 / 3;
+    @include media(1200) {
+      grid-column: auto;
+      grid-row: none;
+      flex-direction: row-reverse;
+    }
+    .benefits__card-title {
+      max-width: 252px;
+    }
   }
   &__index-3 {
     flex-direction: row-reverse;
+    @include media(1200) {
+      flex-direction: row;
+    }
+  }
+  &__index-2,
+  &__index-3 {
+    .benefits__number {
+      color: $dark-light;
+    }
   }
   &__card {
     background: #393939;
+    padding: 0px 16px 26px;
+    color: $light;
   }
   &__card,
   &__image {
-    flex: 1;
+    @include flex-template(2, #{$gap});
   }
   &__number {
     color: $primary;
+    margin-top: -30px;
   }
   &__card-title {
     margin-bottom: 14px;
+    max-width: 151px;
+  }
+  &__list {
+    li {
+      font-size: 16px;
+      &:nth-child(1) {
+        color: $primary;
+      }
+    }
   }
   &__image {
     width: 100%;
