--- a/html/sass/home-page.scss
+++ b/html/sass/home-page.scss
@@ -9,5 +9,6 @@
 @import "layout/callback";
 @import "layout/delivery";
 @import "layout/benefits";
+@import "layout/large-callback";
 @import "layout/contact";
 
