--- a/html/sass/components/_video.scss
+++ b/html/sass/components/_video.scss
@@ -1,11 +1,44 @@
 .video {
-  max-width: 389px;
-  @include media(1200) {
-    max-width: 329px;
+  &__large {
+    max-width: 389px;
+    @include media(1200) {
+      max-width: 329px;
+    }
+    @include media(540) {
+      max-width: 228px;
+    }
   }
-  @include media(540) {
-    max-width: 228px;
+  &__preview {
+    position: relative;
+    cursor: pointer;
+    &:before {
+      content: '';
+      position: absolute;
+      z-index: 1;
+      background: rgba(0, 0, 0, 0.7);
+      width: 100%;
+      height: 100%;
+      @include transition;
+    }
+    .icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: $primary;
+      z-index: 2;
+      @include transition;
+    }
+    @include hover {
+      &:before {
+        opacity: 0.3;
+      }
+      .icon {
+        filter: drop-shadow(0px 0px 20px black);
+      }
+    }
   }
+
   &__sub-title {
     margin-top: 14px;
     @include font-settings(14, 16);
