Add desktop section customers

--- a/html/sass/home-page.scss
+++ b/html/sass/home-page.scss
@@ -10,5 +10,6 @@
 @import "layout/delivery";
 @import "layout/benefits";
 @import "layout/large-callback";
+@import "layout/customers";
 @import "layout/contact";
 
