--- a/html/sass/home-page.scss
+++ b/html/sass/home-page.scss
@@ -8,8 +8,10 @@
 @import "layout/buy";
 @import "layout/callback";
 @import "layout/delivery";
+@import "layout/our-work";
 @import "layout/benefits";
 @import "layout/large-callback";
 @import "layout/customers";
+@import "layout/review";
 @import "layout/contact";
 
