--- a/html/sass/layout/_row.scss
+++ b/html/sass/layout/_row.scss
@@ -28,8 +28,9 @@
   &__item-left-container {
     padding-left: calc(calc((100vw - var(--gap)) / 2) - ((#{$container} - var(--gap)) / 2));
     @include min-media(1921) {
-      padding-right: 0px;
+      padding-left: 0px;
       width: 783.5px;
+      margin-left: auto;
     }
     & > * {
       margin-left: $desktop-padding;
