--- a/html/sass/common.scss
+++ b/html/sass/common.scss
@@ -16,6 +16,7 @@
 @import "components/arrow";
 @import "components/heading";
 @import "components/modal";
+@import "components/dots";
 @import "layout/row";
 @import "layout/grid";
 @import "layout/header";
