--- a/html/sass/components/_modal.scss
+++ b/html/sass/components/_modal.scss
@@ -43,6 +43,7 @@
     justify-content: center;
   }
   &__close {
+    color: $light;
     &.fancybox-button {
       top: -73px;
       right: -133px;
