--- a/html/sass/components/_video.scss
+++ b/html/sass/components/_video.scss
@@ -54,6 +54,12 @@
         filter: drop-shadow(0px 0px 20px black);
       }
     }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
   }
 
   &__sub-title {
