--- a/html/sass/home-page.scss
+++ b/html/sass/home-page.scss
@@ -10,6 +10,7 @@
 @import "layout/delivery";
 @import "layout/our-work";
 @import "layout/benefits";
+@import "layout/more";
 @import "layout/large-callback";
 @import "layout/customers";
 @import "layout/review";
