--- a/html/sass/layout/_customers.scss
+++ b/html/sass/layout/_customers.scss
@@ -6,41 +6,86 @@
   &__flex-end {
     display: flex;
     align-items: flex-end;
+    @include media(1200) {
+      padding-left: $desktop-padding;
+    }
+    @include media(540) {
+      padding-left: $desktop-padding;
+    }
   }
   &__head-inner {
     display: flex;
     @include gap(column, 26px);
-  }
-  &__head {
-
+    @include media(1200) {
+      flex-direction: column;
+      max-width: 540px;
+    }
+    @include media(540) {
+      padding-right: $mobile-padding;
+    }
   }
   &__title {
     margin-bottom: 18px;
   }
   &__logo {
     flex-shrink: 0;
+    @include media(1200) {
+      margin-bottom: 26px;
+    }
   }
   &__h4-title {
     margin-bottom: 17px;
+    @include media(1200) {
+      margin-bottom: 0;
+    }
   }
   &__img {
     height: auto;
+    @include media(1200) {
+      padding-right: $desktop-padding;
+    }
+    @include media(540) {
+      padding-right: $mobile-padding;
+    }
   }
   &__bottom {
     margin-top: 18px;
     display: flex;
     justify-content: flex-end;
+    @include media(1200) {
+      padding-right: $desktop-padding;
+    }
+    @include media(540) {
+      padding-right: $mobile-padding;
+    }
   }
   &__disclaimer {
     max-width: 449px;
     text-align: right;
+    @include media(540) {
+      font-size: 12px;
+    }
+  }
+  &__icon:nth-child(n) {
+    margin-left: 12px;
+    width: 23px;
+    height: auto;
+  }
+  &__list,
+  &__flex-end {
+    @include media(1200) {
+      padding-left: $desktop-padding;
+    }
+    @include media(540) {
+      padding-left: $mobile-padding;
+    }
   }
   &__list-item {
     display: flex;
     padding-bottom: 16px;
     &:not(:last-child) {
       margin-bottom: 16px;
-      border-bottom: 1px solid $dark-light;
+      border-bottom: 1px solid $second-dark;
     }
     p {
       max-width: 603px;
@@ -51,5 +96,18 @@
     color: $primary;
     margin-right: 28px;
     font-weight: 700;
+  }
+  .row__item {
+    @include media(1200) {
+      &:nth-child(2) {
+        order: 3;
+      }
+      &:nth-child(3) {
+        order: 2;
+      }
+      &:nth-child(4) {
+        order: 4;
+      }
+    }
   }
 }
