--- a/html/sass/layout/_delivery.scss
+++ b/html/sass/layout/_delivery.scss
@@ -1,4 +1,9 @@
 .delivery {
+  &__inner {
+    @include media(1200) {
+      grid-template-columns: 1fr;
+    }
+  }
   &__row {
     display: flex;
     @include gap(column, 12px);
@@ -51,5 +56,8 @@
     }
   &__list-title {
     margin-bottom: 18px;
+  }
+  &__head {
+
   }
 }
