--- a/html/sass/layout/_review.scss
+++ b/html/sass/layout/_review.scss
@@ -5,6 +5,9 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 786px;
+    @include media(540) {
+      margin-bottom: 11px;
+    }
     .heading__title {
       margin-bottom: 29px;
     }
@@ -12,20 +15,26 @@
   $gap: 10px;
   &__row {
     margin: -$gap;
-    margin-left: 133px;
-    margin-right: 133px;
+    max-width: 1376px;
   }
   &__item {
     margin: $gap;
     padding: 38px 50px;
     display: flex !important;
     @include gap(column, 28px);
+    @include media(540) {
+      padding: 19px 22px 30px;
+      flex-direction: column;
+    }
   }
   &__card-title {
     margin-bottom: 4px;
   }
   &__image {
     border-radius: 10px;
+    @include media(540) {
+      margin-bottom: 17px;
+    }
   }
   &__bottom {
     margin-top: 22px;
@@ -37,5 +46,28 @@
     left: 50%;
     position: relative;
     transform: translateX(-50%);
+    @include media(1200) {
+      margin-top: 58px;
+    }
+    @include media(540) {
+      margin-top: 42px;
+    }
+  }
+  &__arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 2;
+    padding: 10px 20px;
+    color: $primary;
+    @include hover {
+      color: $dark;
+    }
+  }
+  &__arrow-left {
+    left: -30px;
+  }
+  &__arrow-right {
+    right: -30px;
   }
 }
