Fix slider, text

--- a/html/sass/layout/_customers.scss
+++ b/html/sass/layout/_customers.scss
@@ -87,6 +87,9 @@
       margin-bottom: 16px;
       border-bottom: 1px solid $second-dark;
     }
+    span {
+      color: $primary;
+    }
     p {
       max-width: 603px;
       text-transform: uppercase;
