Fix form and image in section benefits

--- a/html/sass/layout/_more.scss
+++ b/html/sass/layout/_more.scss
@@ -9,6 +9,9 @@
     .slick-list {
       overflow: visible;
     }
+    @include media(1200) {
+      overflow: hidden;
+    }
   }
   &__item {
     max-width: none;
