--- a/html/sass/components/_form.scss
+++ b/html/sass/components/_form.scss
@@ -1,11 +1,14 @@
 .form {
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   &__input {
     margin-bottom: 3px;
   }
   &__button {
     margin-top: 21px;
-    margin-left: auto;
-    margin-right: auto;
   }
   .screen-reader-response,
   .wpcf7-not-valid-tip {
