--- a/html/sass/layout/_benefits.scss
+++ b/html/sass/layout/_benefits.scss
@@ -152,6 +152,7 @@
     object-position: center;
     object-fit: cover;
     height: 100%;
+    width: 100%;
   }
   &__button {
     margin-top: 42px;
