--- a/html/sass/common/_reset.scss
+++ b/html/sass/common/_reset.scss
@@ -148,7 +148,7 @@ button {
 }
 p, span, label, h1, h2, h3, h4, h5, h6, b, strong, i, em {
   max-width: 100%;
-  word-wrap: break-word;
+  word-wrap: normal;
   white-space: normal;
   margin: 0;
 }
