--- a/html/sass/home-page.scss
+++ b/html/sass/home-page.scss
@@ -3,6 +3,7 @@
 @import "components/buttons-row";
 @import "components/step";
 @import "components/video";
+@import "components/review-item";
 @import "layout/hero";
 @import "layout/how-we-work";
 @import "layout/buy";
