Add video section on page review

--- a/html/sass/review.scss
+++ b/html/sass/review.scss
@@ -4,6 +4,7 @@
 @import "components/buttons-row";
 @import "components/video";
 @import "layout/page";
+@import "layout/video-our-work";
 @import "layout/large-callback";
 @import "layout/about-us";
 
